# loopgit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  FixIconRounded.ps1  README.md  app.rc  appsettingsdialog.cpp  appsettingsdialog.h  blamedialog.cpp  blamedialog.h  branchdialog.cpp  branchdialog.h  commitgraphdelegate.cpp  commitgraphdelegate.h  commitgraphmodel.cpp  commitgraphmodel.h  comparedialog.cpp  comparedialog.h  conflictresolverdialog.cpp  conflictresolverdialog.h  convert_ico.py  diffsyntaxhighlighter.cpp  diffsyntaxhighlighter.h  diffviewwidget.cpp  diffviewwidget.h  extract.ps1  extract.py  gitmanager.cpp  gitmanager.h  loopgit-sonraki-adimlar.md  loopgit_features.md  loopgit_features_for_review.md  loopgit_project_summary.md  loopgit_setup.iss  main.cpp  mainwindow.cpp  mainwindow.h  qt-git-client-proje-plani.md  reflogdialog.cpp  reflogdialog.h  (+5 more)
